W05 assigment completed
