# model/index.js
@@ -69,7 +69,7 @@ const getUserById = async (req, res) => {
 }
 const createUser = async (req, res) => {
     const user = {
-        name: req.body.name
+        username: req.body.username
     };
     const POST = await mongodb.getDb().collection(process.env.COLLECTION_USERS).insertOne(user);
     if (POST.acknowledged) {
@@ -79,7 +79,7 @@ const createUser = async (req, res) => {
 const updateUser = async (req, res) => {
     const userId = new ObjectId(req.params.id);
     const user = {
-        name: req.body.name
+        username: req.body.username
     };
     const PUT = await mongodb.getDb().collection(process.env.COLLECTION_USERS).replaceOne({ _id: userId }, user);
     if (PUT.acknowledged) {
